--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
-  "description": "",
+  "description": "nodejs-hw-mongodb",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,5 +16,10 @@
     "eslint": "^9.4.0",
     "globals": "^15.3.0",
     "nodemon": "^3.1.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "pino-http": "^10.1.0"
   }
 }
