--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PORT= 3000
-MONGODB_USER=marimorskaya93
-MONGODB_PASSWORD=cM0XKD5mdlqKdW7X
-MONGODB_URL=cluster0.gfr5ret.mongodb.net
-MONGODB_DB=contacts
+PORT=
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
